<resources>
    <string name="app_name">ZUNARS</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号码/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="back_btn">返回</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_ohone">手机号码格式错误</string>
    <string name="error_invalid_password">密码长度</string>
    <string name="error_incorrect_password">账号或密码错误</string>
    <string name="error_field_required">填写项不能为空</string>
    <string name="sns_sign_in">使用第三方帐号登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_data">没有找到符合条件的房源</string>


    <!--房源列表-->
</resources>
