<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.zunars.www.zunars.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        theme="@style/AppTheme">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorGreen"
            android:layout_width="fill_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/back_btn"
                android:text="@string/back_btn"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:layout_height="fill_parent" />

            <TextView
                android:text="@string/action_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/sign_up_btn"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:text="@string/action_sign_up"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:clickable="true"
                android:paddingRight="16dp"
                android:layout_height="fill_parent" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:background="@color/colorGreen"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorGreen"
                android:textSize="12sp"
                android:text="忘记密码"
                />

            <TextView
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorGreen"
                android:textSize="12sp"
                android:layout_alignParentRight="true"
                android:text="手机号快捷登录" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="12sp"
            android:textColor="@color/black_overlay"
            android:gravity="center_horizontal"
            android:text="@string/sns_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
